[project]
name = "site-mapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alex Dempsey", email = "avdempsey@archive.org" }
]
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.54.0",
    "pyyaml>=6.0.1",
]

[project.scripts]
site-mapper = "site_mapper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.5",
]